--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0",
-    "@nuxtjs/bulma": "^1.2.1",
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^2.6.0"
+    "@nuxtjs/bulma": "^1.2.1",
+    "@nuxtjs/pwa": "^2.6.0",
+    "cross-env": "^5.2.0",
+    "firebase": "^5.8.4",
+    "nuxt": "^2.4.0",
+    "vuexfire": "^2.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
