--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@nuxtjs/bulma": "^1.2.1",
     "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
+    "dayjs": "^1.8.8",
     "firebase": "^5.8.4",
     "nuxt": "^2.4.0",
-    "vuexfire": "^2.3.1"
+    "vue": "^2.6.7",
+    "vuexfire": "^3.0.0-alpha.14"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
