--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "author": "Ryutaro Kawakami",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "dev": "nuxt-ts",
+    "build": "nuxt-ts build",
+    "start": "nuxt-ts start",
+    "generate": "nuxt-ts generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
@@ -20,25 +18,15 @@
     "dayjs": "^1.8.8",
     "firebase": "^5.8.4",
     "marked": "^0.6.1",
-    "nuxt": "^2.4.0",
-    "vue": "^2.6.7",
-    "vuexfire": "^3.0.0-alpha.14"
+    "vuexfire": "^3.0.0-alpha.14",
+    "nuxt-ts": "2.4.5",
+    "nuxt-property-decorator": "2.1.3",
+    "vuex-class": "0.3.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
-    "@nuxtjs/eslint-config": "^0.0.1",
-    "babel-eslint": "^8.2.1",
-    "eslint": "^5.0.1",
-    "eslint-config-standard": ">=12.0.0",
-    "eslint-plugin-import": ">=2.14.0",
-    "eslint-plugin-jest": ">=21.24.1",
-    "eslint-plugin-node": ">=7.0.1",
-    "eslint-plugin-promise": ">=4.0.1",
-    "eslint-plugin-standard": ">=4.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-prettier": "2.6.2",
+    "@nuxt/vue-app": "2.4.5",
+    "@types/node": "10.14.1",
+    "@types/webpack-env": "1.13.9",
     "prettier": "1.14.3"
   }
 }
