JSの拡張子をTSに

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,21 @@
 {
   "extends": "@nuxt/typescript",
   "compilerOptions": {
+    "experimentalDecorators": true,
+    "noImplicitAny": false,
+    "strict": false,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "baseUrl": ".",
     "types": [
+      "@nuxt/vue-app",
       "@types/node",
-      "@nuxt/vue-app"
-    ]
+      "@types/webpack-env"
+    ],
+    "paths": {
+      "~/*": [
+        "./*"
+      ]
+    }
   }
 }
