--- a/functions/package.json
+++ b/functions/package.json
@@ -10,12 +10,22 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "firebase-functions": "^2.2.0",
+    "dayjs": "^1.8.8",
+    "firebase": "^5.8.4",
+    "marked": "^0.6.1",
+    "nuxt": "^2.4.5",
+    "vue": "^2.6.7",
+    "vuexfire": "^3.0.0-alpha.14"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
     "eslint-plugin-promise": "^4.0.1"
   },
-  "private": true
+  "private": true,
+  "engines": {
+    "node": "8"
+  }
 }
