--- a/functions/package.json
+++ b/functions/package.json
@@ -10,15 +10,19 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "express": "^4.16.3",
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.2.0",
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/bulma": "^1.2.1",
+    "@nuxtjs/pwa": "^3.0.0-beta.13",
+    "cross-env": "^5.2.0",
     "dayjs": "^1.8.8",
-    "firebase": "^5.8.4",
+    "firebase": "^5.0.0",
+    "firebase-tools": "^6.5.0",
     "marked": "^0.6.1",
     "nuxt": "^2.4.5",
     "vue": "^2.6.7",
-    "vuexfire": "^3.0.0-alpha.14"
+    "vuexfire": "3.0.0-alpha.9"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
