--- a/functions/package.json
+++ b/functions/package.json
@@ -25,6 +25,7 @@
     "vuexfire": "3.0.0-alpha.9"
   },
   "devDependencies": {
+    "firebase-tools": "^6.5.0",
     "eslint": "^5.12.0",
     "eslint-plugin-promise": "^4.0.1"
   },
